--- a/package.json
+++ b/package.json
@@ -7,5 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@ledgerhq/hw-app-eth": "^5.25.0",
+    "@ledgerhq/hw-transport-webusb": "^5.25.0",
+    "@ledgerhq/web3-subprovider": "^5.25.0",
+    "bnc-sdk": "^2.1.5",
+    "elm": "^0.19.1-3",
+    "ethereumjs-wallet": "https://github.com/ethereumjs/ethereumjs-wallet.git#2121d5a32195e595accc9dce81d14bae8b4e6de6",
+    "ethers": "^5.0.23",
+    "ethjs-provider-signer": "^0.1.4",
+    "walletlink": "^2.0.1",
+    "web3-core-helpers": "1.2.7",
+    "web3-eth": "1.2.7",
+    "web3-utils": "1.2.7"
+  },
+  "devDependencies": {
+    "elm-format": "^0.8.1",
+    "elm-test": "0.19.1-revision2"
+  }
 }
