--- a/package.json
+++ b/package.json
@@ -4,24 +4,48 @@
   "description": "A Compound component library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --unhandled-rejections=strict sample-app/scripts/start.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@ledgerhq/hw-app-eth": "^5.25.0",
     "@ledgerhq/hw-transport-webusb": "^5.25.0",
     "@ledgerhq/web3-subprovider": "^5.25.0",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.0.0",
     "bnc-sdk": "^2.1.5",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "chalk": "^4.0.0",
+    "core-js": "3",
+    "css-loader": "^3.5.3",
     "elm": "^0.19.1-3",
+    "elm-hot-webpack-loader": "^1.0.0",
+    "elm-webpack-loader": "^6.0.1",
     "ethereumjs-wallet": "https://github.com/ethereumjs/ethereumjs-wallet.git#2121d5a32195e595accc9dce81d14bae8b4e6de6",
     "ethers": "^5.0.23",
     "ethjs-provider-signer": "^0.1.4",
+    "file-loader": "^6.0.0",
+    "fs-extra": "^9.0.0",
     "google-translate": "^3.0.0",
+    "html-webpack-plugin": "4.2.1",
+    "node-sass-chokidar": "^1.4.0",
+    "promise": "8.1.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-loader": "3.0.0",
+    "react-dev-utils": "^10.2.1",
+    "string-replace-loader": "^2.1.1",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "walletlink": "^2.0.1",
     "web3-core-helpers": "1.2.7",
     "web3-eth": "1.2.7",
     "web3-utils": "1.2.7",
+    "webpack": "^4.35.2",
+    "webpack-dev-server": "^3.7.2",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
