--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ledgerhq/hw-app-eth": "^5.25.0",
     "@ledgerhq/hw-transport-webusb": "^5.25.0",
     "@ledgerhq/web3-subprovider": "^5.25.0",
+    "@walletconnect/web3-provider": "^1.3.4",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.0",
     "bnc-sdk": "^2.1.5",
@@ -33,9 +34,9 @@
     "google-translate": "^3.0.0",
     "html-webpack-plugin": "4.2.1",
     "node-sass-chokidar": "^1.4.0",
-    "promise": "8.1.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "3.0.0",
+    "promise": "8.1.0",
     "react-dev-utils": "^10.2.1",
     "string-replace-loader": "^2.1.1",
     "style-loader": "^1.2.1",
