--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "walletlink": "^2.1.0",
-    "web3-core-helpers": "1.2.7",
-    "web3-eth": "1.2.7",
-    "web3-utils": "1.2.7",
+    "web3-core-helpers": "^1.3.5",
+    "web3-eth": "^1.3.5",
+    "web3-utils": "^1.3.5",
     "webpack": "^4.35.2",
     "webpack-dev-server": "^3.7.2",
     "yargs": "^16.2.0"
