--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@ledgerhq/hw-app-eth": "^5.25.0",
-    "@ledgerhq/hw-transport-webusb": "^5.25.0",
-    "@ledgerhq/web3-subprovider": "^5.25.0",
-    "@walletconnect/web3-provider": "^1.3.4",
+    "@ledgerhq/hw-app-eth": "^5.50.0",
+    "@ledgerhq/hw-transport-webusb": "^5.50.0",
+    "@walletconnect/web3-provider": "^1.4.1",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.0",
     "bnc-sdk": "^2.1.5",
@@ -41,10 +40,10 @@
     "string-replace-loader": "^2.1.1",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
-    "walletlink": "^2.0.1",
-    "web3-core-helpers": "1.2.7",
-    "web3-eth": "1.2.7",
-    "web3-utils": "1.2.7",
+    "walletlink": "^2.1.0",
+    "web3-core-helpers": "^1.3.5",
+    "web3-eth": "^1.3.5",
+    "web3-utils": "^1.3.5",
     "webpack": "^4.35.2",
     "webpack-dev-server": "^3.7.2",
     "yargs": "^16.2.0"
