--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "core-js": "3",
     "css-loader": "^3.5.3",
     "elm": "^0.19.1-3",
-    "elm-hot-webpack-loader": "^1.1.7",
+    "elm-hot-webpack-loader": "1.1.7",
     "elm-webpack-loader": "^6.0.1",
     "ethereumjs-wallet": "https://github.com/ethereumjs/ethereumjs-wallet.git#2121d5a32195e595accc9dce81d14bae8b4e6de6",
     "ethers": "^5.0.23",
