--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@ledgerhq/hw-app-eth": "^6.6.0",
@@ -45,9 +46,7 @@
     "web3-utils": "^1.3.5",
     "webpack": "^4.35.2",
     "webpack-dev-server": "^3.7.2",
-    "yargs": "^16.2.0"
-  },
-  "devDependencies": {
+    "yargs": "^16.2.0",
     "elm-format": "^0.8.1",
     "elm-test": "0.19.1-revision2"
   }
