--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chalk": "^4.0.0",
     "core-js": "3",
     "css-loader": "^3.5.3",
-    "elm": "^0.19.1-3",
+    "elm": "^0.19.1-5",
     "elm-hot-webpack-loader": "1.1.7",
     "elm-webpack-loader": "^6.0.1",
     "ethereumjs-wallet": "https://github.com/ethereumjs/ethereumjs-wallet.git#2121d5a32195e595accc9dce81d14bae8b4e6de6",
@@ -48,7 +48,15 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "elm-format": "^0.8.1",
+    "elm-format": "=0.8.5",
     "elm-test": "0.19.1-revision2"
+  },
+  "resolutions": {
+    "**/ethereumjs-wallet": "https://github.com/ethereumjs/ethereumjs-wallet.git#2121d5a32195e595accc9dce81d14bae8b4e6de6",
+    "**/fsevents": "^2.1.3",
+    "**/node-hid": "^1.2.0",
+    "**/sha3": "^2.1.2",
+    "**/elm": "^0.19.1-5",
+    "**/elmi-to-json": "^1.4.3"
   }
 }
