--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@ledgerhq/hw-app-eth": "^6.6.0",
-    "@ledgerhq/hw-transport-webusb": "^6.6.0",
+    "@ledgerhq/hw-app-eth": "6.6.0",
+    "@ledgerhq/hw-transport-webusb": "6.27.1",
     "@walletconnect/web3-provider": "^1.5.4",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.0",
