Update wallet connect v2 in connect wallet ports (#82)
* Update wallet connect api.

* Try using provider.connect instead of provider.enable on wallet connect.

* Revert "Try using provider.connect instead of provider.enable on wallet connect."

This reverts commit d61e90987298cec84fc092b0d8c7e4005731fd0a.

* Fix Webpack and add in minor styling.

* Revert "Remove wallet connect as option for now. (#83)"

This reverts commit 51068b7ac918679459ea47c69510cf71a87c270e.

* Added in passing of WC project id via command line.

* Use correct name for showing qr modal and use connect() instead of enable() for ethereumProvider.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --unhandled-rejections=strict sample-app/scripts/start.js"
+    "start": "npx dart-sass -I. -Inode_modules sample-app/src/scss:sample-app/src/css-build && node --unhandled-rejections=strict sample-app/scripts/start.js",
+    "build-css": "npx dart-sass -I. -Inode_modules sample-app/src/scss:sample-app/src/css-build"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "@babel/preset-env": "^7.0.0",
     "@ledgerhq/hw-app-eth": "^6.6.0",
     "@ledgerhq/hw-transport-webusb": "^6.6.0",
-    "@walletconnect/web3-provider": "^1.5.4",
+    "@walletconnect/ethereum-provider": "^2.8.4",
+    "@walletconnect/modal": "^2.5.4",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.0",
     "bnc-sdk": "^2.1.5",
