feat: change name and publish package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "compound-components",
-  "version": "1.0.2",
+  "name": "seahorse-compound-components",
+  "version": "1.0.0",
   "description": "A Compound component library",
   "main": "index.js",
   "scripts": {
